fix: mobile sidebar overflowY made auto

--- a/scss/main-files/games/coming-soon.scss
+++ b/scss/main-files/games/coming-soon.scss
@@ -115,7 +115,7 @@
     height: calc(100vh - 40px - 53px);
     padding-inline: rem(28px);
 
-    overflow-y: scroll;
+    overflow-y: auto;
 
     @include da-breakpoint(tablet) {
       margin-inline: rem(18px);
